tests/bad_reserved_name_enum_item.stderr
tests/bad_reserved_name_enum_item.sl:13:21: error: identifier prefix '__sl_' is reserved
